--- a/Shadowrocket/Shadowrocket.conf
+++ b/Shadowrocket/Shadowrocket.conf
@@ -1,43 +1,114 @@
 [General]
-bypass-system = true
-dns-server = system, 119.29.29.29, 114.114.114.114, 223.5.5.5, 1.2.4.8
-bypass-tun = 10.0.0.0/8, 100.64.0.0/10, 127.0.0.0/8, 169.254.0.0/16, 172.16.0.0/12, 192.0.0.0/24, 192.0.2.0/24, 192.88.99.0/24, 192.168.0.0/16, 198.18.0.0/15, 198.51.100.0/24, 203.0.113.0/24, 224.0.0.0/4, 255.255.255.255/32
-skip-proxy = 127.0.0.1, 192.168.0.0/16, 10.0.0.0/8, 172.16.0.0/12, 100.64.0.0/10, localhost, *.local, *.crashlytics.com, *.edu.cn, captive.apple.com
 
+wifi-assist = false
+all-hybrid = false
+udp-priority = false
+internet-test-url = http://www.apple.com/library/test/success.html
+proxy-test-url = http://cp.cloudflare.com/generate_204
+test-timeout = 5
+geoip-maxmind-url = https://raw.githubusercontent.com/Loyalsoldier/geoip/release/Country.mmdb
+ipv6 = false
+ipv6-vif = auto
+allow-wifi-access = false
+wifi-access-http-port = 6152
+wifi-access-socks5-port = 6153
+http-listen = 127.0.0.1:6152
+socks5-listen = 127.0.0.1:6153
+allow-hotspot-access = false
+compatibility-mode = 0
+skip-proxy = 192.168.0.0/24, 10.0.0.0/8, 172.16.0.0/12, 127.0.0.1, localhost, *.local, seed-sequoia.siri.apple.com, sequoia.siri.apple.com, sequoia.apple.com, passenger.t3go.cn, www.baidu.com, yunbusiness.ccb.com, wxh.wo.cn, gate.lagou.com, www.abchina.com.cn, www.shanbay.com, login-service.mobile-bank.psbc.com, mobile-bank.psbc.com
+exclude-simple-hostnames = true
+dns-server = 119.29.29.29, 180.184.1.1, 223.5.5.5, system
+read-etc-hosts = true
+loglevel = notify
+show-error-page-for-reject = true
+always-real-ip = *.msftconnecttest.com, *.msftncsi.com, *.srv.nintendo.net, *.stun.playstation.net, xbox.*.microsoft.com, *.xboxlive.com, *.logon.battlenet.com.cn, *.logon.battle.net, stun.l.google.com
+hijack-dns = *:53
+tun-excluded-routes = 239.255.255.250/32
+udp-policy-not-supported-behaviour = REJECT
+proxy-test-udp = apple.com@8.8.8.8
+hide-vpn-icon = false
+[Replica]
+hide-apple-request = 0
+hide-crash-reporter-request = 1
+hide-udp = 0
+
+[Proxy Group]
+
+#分流分组
+𝐆𝐨𝐨𝐠𝐥𝐞 = select, 🇭🇰 香港节点, 🇺🇸 美国节点, 🇸🇬 新加坡节点, 🇯🇵 日本节点, 🇨🇳 台湾节点, no-alert=0, hidden=0
+𝐓𝐞𝐥𝐞𝐠𝐫𝐚𝐦 = select, 🇭🇰 香港节点, 🇺🇸 美国节点, 🇸🇬 新加坡节点, 🇯🇵 日本节点, 🇨🇳 台湾节点, no-alert=0, hidden=0
+𝐒𝐩𝐞𝐞𝐝𝐭𝐞𝐬𝐭 = select, 🇭🇰 香港节点, 🇺🇸 美国节点, 🇸🇬 新加坡节点, 🇯🇵 日本节点, 🇨🇳 台湾节点, no-alert=0, hidden=0
+𝐘𝐨𝐮𝐓𝐮𝐛𝐞 = select, 🇭🇰 香港节点, 🇺🇸 美国节点, 🇸🇬 新加坡节点, 🇯🇵 日本节点, 🇨🇳 台湾节点, no-alert=0, hidden=0
+𝐒𝐩𝐨𝐭𝐢𝐟𝐲 = select, 🇭🇰 香港节点, 🇺🇸 美国节点, 🇸🇬 新加坡节点, 🇯🇵 日本节点, 🇨🇳 台湾节点, no-alert=0, hidden=0
+𝐓𝐢𝐤𝐓𝐨𝐤 = select, 🇰🇷 韩国节点, 🇯🇵 日本节点, 🇨🇳 台湾节点, no-alert=0, hidden=0
+𝐓𝐰𝐢𝐭𝐭𝐞𝐫 = select, 🇭🇰 香港节点, 🇺🇸 美国节点, 🇸🇬 新加坡节点, 🇯🇵 日本节点, 🇨🇳 台湾节点, no-alert=0, hidden=0
+𝐆𝐢𝐭𝐇𝐮𝐛 = select, 🇭🇰 香港节点, 🇺🇸 美国节点, 🇸🇬 新加坡节点, 🇯🇵 日本节点, 🇨🇳 台湾节点, no-alert=0, hidden=0
+𝐀𝐩𝐩𝐥𝐞 = select, DIRECT, no-alert=0, hidden=0
+𝐌𝐢𝐜𝐫𝐨𝐬𝐨𝐟𝐭 = select, DIRECT, no-alert=0, hidden=0
+𝐅𝐚𝐜𝐞𝐛𝐨𝐨𝐤 = select, 🇭🇰 香港节点, 🇺🇸 美国节点, 🇸🇬 新加坡节点, 🇯🇵 日本节点, 🇨🇳 台湾节点, no-alert=0, hidden=0
+𝐆𝐥𝐨𝐛𝐚𝐥 = select, 🇭🇰 香港节点, 🇺🇸 美国节点, 🇸🇬 新加坡节点, 🇯🇵 日本节点, 🇨🇳 台湾节点, no-alert=0, hidden=0
+𝐎𝐩𝐞𝐧𝐀𝐢 = select, 🇺🇸 美国节点, no-alert=0, hidden=0
+兜底分流 = select, DIRECT, 🇭🇰 香港节点, 🇺🇸 美国节点, 🇸🇬 新加坡节点, 🇯🇵 日本节点, 🇨🇳 台湾节点, no-alert=0, hidden=0
+
+#自动测速
+
+🇭🇰 香港节点 = url-test,select=0,url=http://www.gstatic.com/generate_204,policy-regex-filter=(?=.*(港|香港|HK|(?i)Hong))^((?!(台|日|韩|新|美)).)*$,timeout=5,tolerance=0,interval=600
+🇹🇼 台湾节点 = url-test,select=0,url=http://www.gstatic.com/generate_204,policy-regex-filter=(?=.*(台|台湾|TW|(?i)Taiwan))^((?!(港|日|韩|新|美)).)*$,timeout=5,tolerance=0,interval=600
+🇯🇵 日本节点 = url-test,select=0,url=http://www.gstatic.com/generate_204,policy-regex-filter=(?=.*(日|日本|JP|(?i)Japan))^((?!(港|台|韩|新|美)).)*$,timeout=5,tolerance=0,interval=600
+🇸🇬 新加坡节点 = url-test,select=0,url=http://www.gstatic.com/generate_204,policy-regex-filter=(?=.*(新|新加坡|狮|獅|SG|(?i)Singapore))^((?!(港|台|日|韩|美)).)*$,timeout=5,tolerance=0,interval=600
+🇺🇸 美国节点 = url-test,select=0,url=http://www.gstatic.com/generate_204,policy-regex-filter=(?=.*(美|美国|US|(?i)States|American))^((?!(港|台|日|韩|新)).)*$,timeout=5,tolerance=0,interval=600
+🇰🇷 韩国节点 = url-test,select=0,url=http://www.gstatic.com/generate_204,policy-regex-filter=(?=.*(韓|韩国|KR|(?i)Korea))^((?!(港|台|日|美|新)).)*$,timeout=5,tolerance=0,interval=600
 
 [Rule]
-RULE-SET,https://raw.githubusercontent.com/loonvip/2028/main/Shadowrocket/China.list,DIRECT
-RULE-SET,https://raw.githubusercontent.com/loonvip/2028/main/Shadowrocket/Telegram.list,PROXY
-RULE-SET,https://raw.githubusercontent.com/loonvip/2028/main/Shadowrocket/GitHub.list,PROXY
-RULE-SET,https://raw.githubusercontent.com/loonvip/2028/main/Shadowrocket/Apple.list,DIRECT
-RULE-SET,https://raw.githubusercontent.com/loonvip/2028/main/Shadowrocket/Advertising.list,REJECT
-RULE-SET,https://raw.githubusercontent.com/loonvip/2028/main/Shadowrocket/Facebook.list,PROXY
-RULE-SET,https://raw.githubusercontent.com/loonvip/2028/main/Shadowrocket/Google.list,PROXY
-RULE-SET,https://raw.githubusercontent.com/loonvip/2028/main/Shadowrocket/NetEaseMusic.list,DIRECT
-RULE-SET,https://raw.githubusercontent.com/loonvip/2028/main/Shadowrocket/Spotify.list,PROXY
-RULE-SET,https://raw.githubusercontent.com/loonvip/2028/main/Shadowrocket/TikTok.list,PROXY
-RULE-SET,https://raw.githubusercontent.com/loonvip/2028/main/Shadowrocket/Twitter.list,PROXY
+
+#分流规则
+RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/ChinaIPs/ChinaIPs.list,DIRECT
+RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/China/China_All.list,DIRECT
+RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/AdvertisingLite/AdvertisingLite.list,REJECT
+RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Privacy/Privacy.list,REJECT
+RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Hijacking/Hijacking.list,REJECT
+RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/ZhihuAds/ZhihuAds.list,REJECT
+RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/BlockHttpDNS/BlockHttpDNS.list,REJECT
+RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Facebook/Facebook.list,𝐅𝐚𝐜𝐞𝐛𝐨𝐨𝐤
+RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Apple/Apple.list,𝐀𝐩𝐩𝐥𝐞
+RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/TikTok/TikTok.list,𝐓𝐢𝐤𝐓𝐨𝐤
+RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Spotify/Spotify.list,𝐒𝐩𝐨𝐭𝐢𝐟𝐲
+RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Speedtest/Speedtest.list,𝐒𝐩𝐞𝐞𝐝𝐭𝐞𝐬𝐭
+RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/OpenAI/OpenAI.list,𝐎𝐩𝐞𝐧𝐀𝐢
+RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Telegram/Telegram.list,𝐓𝐞𝐥𝐞𝐠𝐫𝐚𝐦
+RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Twitter/Twitter.list,𝐓𝐰𝐢𝐭𝐭𝐞𝐫
+RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Microsoft/Microsoft.list,𝐌𝐢𝐜𝐫𝐨𝐬𝐨𝐟𝐭
+RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/GitHub/GitHub.list,𝐆𝐢𝐭𝐇𝐮𝐛
+RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Google/Google.list,𝐆𝐨𝐨𝐠𝐥𝐞
+RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/YouTube/YouTube.list,𝐘𝐨𝐮𝐓𝐮𝐛𝐞
+RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Global/Global.list,𝐆𝐥𝐨𝐛𝐚𝐥
+RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Hijacking/Hijacking.list,REJECT
+RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Privacy/Privacy_All.list,REJECT
 GEOIP,CN,DIRECT
-FINAL,PROXY
+FINAL,兜底分流
+
+[Host]
+*testflight.apple.com = server:8.8.4.4
+mtalk.google.com = 108.177.125.188
+dl.google.com = server:119.29.29.29
+dl.l.google.com = server:119.29.29.29
+update.googleapis.com = server:119.29.29.29
+*.dl.playstation.net = server:119.29.29.29
 
 [URL Rewrite]
-^http://(www.)?google.cn https://www.google.com 302
-(?<=_region=)CN(?=&) TW 307
-(?<=&mcc_mnc=)4 2 307
-^(https?:\/\/dm[\w-]+\.\w+\.com\/.+)(\?)(.+) $1$3 302
-(^https?:\/\/*\.\w{4}okv.com\/.+&.+)(\d{2}\.3\.\d)(.+) $118.0$3 302
-ctier=[A-Z] ctier=A 302
-^https:\/\/[\s\S]*\.googlevideo\.com/.*&(oad|ctier) _ REJECT
-
-
-[Script]
-京东比价 = type=http-response,requires-body=true,pattern=^https?://api\.m\.jd\.com/client\.action\?functionId=(wareBusiness|serverConfig|basicConfig),max-size=1048576,script-path=https://raw.githubusercontent.com/yichahucha/surge/master/jd_price.js,enable=true
-淘宝比价1 = type=http-request,requires-body=true,pattern=^http://.+/amdc/mobileDispatch,max-size=1048576,script-path=https://raw.githubusercontent.com/yichahucha/surge/master/tb_price.js,enable=true
-淘宝比价2 = type=http-response,requires-body=true,pattern=^https?://trade-acs\.m\.taobao\.com/gw/mtop\.taobao\.detail\.getdetail,max-size=1048576,script-path=https://raw.githubusercontent.com/yichahucha/surge/master/tb_price.js,enable=true
-获取京东Cookie = type=http-request,pattern=https:\/\/api\.m\.jd\.com\/client\.action.*functionId=signBean,script-path=https://raw.githubusercontent.com/NobyDa/Script/master/JD-DailyBonus/JD_DailyBonus.js, enable=true
-京东多合一签到 = type=cron,cronexpr="5 0 * * *",timeout=20,script-path=https://raw.githubusercontent.com/NobyDa/Script/master/JD-DailyBonus/JD_DailyBonus.js, enable=true
-京东农场 = type=cron,cronexpr="5 6-18/6 * * *",timeout=20,script-path=https://raw.githubusercontent.com/LXK9301/jd_scripts/master/jd_fruit.js,enable=true
+# ======= Google搜索重写 ======= #
+^https?://(www.)?g.cn https://www.google.com 302
+^https?://(www.)?google.cn https://www.google.com 302
 
 [MITM]
-enable = false
-hostname = *.tiktokv.com, *.byteoversea.com, *.tik-tokapi.com, *.googlevideo.com
+skip-server-cert-verify = true
+hostname = *.googlevideo.com, *.google.cn, -*.apple.com, -consumer.fcbox.com, -*huami.com, -weather-data.apple.com, -*amemv.com, -*snssdk.com, -www.google.com
+ca-passphrase = 
+ca-p12 = 
+enable = true
+
+
+
+
+
