--- a/Surfboard/surfboard.conf
+++ b/Surfboard/surfboard.conf
@@ -30,7 +30,7 @@ hide-udp = 0
 
 [Proxy Group]
 
-𝐏𝐫𝐨𝐱𝐲 = select, DIRECT, policy-path=https://suo.yt/wcIXNoX
+𝐏𝐫𝐨𝐱𝐲 = select, DIRECT, policy-path=
 
 #分流分组
 𝐆𝐨𝐨𝐠𝐥𝐞 = select, 𝐏𝐫𝐨𝐱𝐲, 🇭🇰 香港节点, 🇺🇸 美国节点, 🇸🇬 新加坡节点, 🇯🇵 日本节点, 🇨🇳 台湾节点, no-alert=0, hidden=0
